# homeworks

robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/: CMakeLists.txt  bits_translation.ods  caja_safety_fence.sh  run_controller_manager.sh  wise-710
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_infra/: CMakeLists.txt
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_infra/include/caja_infra/: caja_containers.h  caja_node_base.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_infra/src/: caja_node_base.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_logger/: CMakeLists.txt
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_logger/include/caja_logger/: caja_logger.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/caja_logger/src/caja_logger/: caja_logger.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/commands/: CMakeLists.txt
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/commands/include/commands/: commander.h  modbus_commands.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/commands/include/modbus/: modbus.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/commands/src/: commander.cpp  modbus_commands.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/: CMakeLists.txt
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/config/: controller_manager.yaml
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/include/caja_backend_api/: caja_backend_api.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/include/controller_manager/: controller_manager.h  safety_controller.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/src/caja_backend_api/: caja_backend_api.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/controller_manager/src/controller_manager/: controller_manager.cpp  safety_controller.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/infra/: CMakeLists.txt
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/infra/include/infra/: logger.h  pipe_queue.h  timer.h
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/infra/src/: logger.cpp
robotsoft-controller_soft-8208f5bf7a85/robotsoft-controller_soft-8208f5bf7a85/setup/: eth show  install-cmake.sh  port_forawrding_setup.sh  wise-setup
